--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@lineiconshq/free-icons": "^1.0.3",
+    "@lineiconshq/react-lineicons": "^1.0.5",
+    "@react-email/components": "^1.0.2",
+    "@react-email/render": "^2.0.0",
+    "lineicons": "^1.3.2",
+    "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "react-hot-toast": "^2.6.0",
+    "resend": "^6.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
